--- a/css/Index-estilos.css
+++ b/css/Index-estilos.css
@@ -36,7 +36,7 @@ body{
 	margin: 2px auto;
     background: #e6dddd;
     border-radius: 15px;
-    border:black solid;
+    border:black 0.5px solid;
 }
 
 
@@ -76,7 +76,7 @@ body{
     width: 95%;
     padding: 30px;
     height: 14%;
-    border: solid black;
+    border: solid 0.5px black;
   }
  
 
@@ -115,11 +115,11 @@ body{
     padding: 2px;
     border-radius: 3px;
     float: left;
-    border: solid black;
+    border: solid 0.5px black;
 }
 
 #CuentaUser{
-    border: solid black;
+    border: solid 0.5px black;
     height: 140px;
     width: 300px;
     padding: 2px;
@@ -150,7 +150,7 @@ body{
     background: #e6dddd;
     padding: 3px;
     margin: 3px;
-    border: solid black;
+    border: solid 0.5px black;
     border-radius: 3px;
 
 }
@@ -159,7 +159,7 @@ body{
 #imagenProducto img{
     height: 180px;
     width: 350px;
-    border: solid;
+    border: solid 0.5px;
     margin: 2px;
     border-radius: 2px;
     float: left;
@@ -170,7 +170,7 @@ body{
     padding: 10px;
     width: 200px;
     height: 100px;
-    border: solid #b48888;
+   /* border: solid 0.5px #b48888; */
     float: right;
 }
 
@@ -268,7 +268,7 @@ border-radius: 5px;
 	margin: 5px auto;
     background: #e6dddd;
     border-radius: 10px;
-    border:black solid;
+    border:black 0.5px solid;
 }
 
 
